--- a/app/src/main/res/layout/activity_rides.xml
+++ b/app/src/main/res/layout/activity_rides.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.it326.isucarpool.SettingsActivity">
+    tools:context="com.it326.isucarpool.RidesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_settings" />
-
+    <include layout="@layout/content_rides" />
 
 </android.support.design.widget.CoordinatorLayout>
