--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -1,22 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_chats"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.it326.isucarpool.ChatsFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.it326.isucarpool.ChatsActivityFragment"
+    tools:showIn="@layout/activity_chats">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="CHATS"
-             android:textSize="60dp"
-
-            android:layout_gravity="center"/>
-
-    </LinearLayout>
-
-</FrameLayout>
+</RelativeLayout>
