--- a/app/src/main/res/layout/fragment_rides.xml
+++ b/app/src/main/res/layout/fragment_rides.xml
@@ -7,13 +7,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.it326.isucarpool.RidesFragment"
     tools:showIn="@layout/activity_rides">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="RIDES" />
-
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/rideslistview" />
 </RelativeLayout>
