--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -24,11 +24,19 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/startingLocation"
+        android:layout_below="@+id/startingLocation"
         android:maxLines="1"
         android:background="@drawable/common_google_signin_btn_text_light"
         android:id="@+id/endingLocation"
-        android:hint="Ending location"/>
+        android:hint="Ending location" />
 
-    
+    <Button
+        android:id="@+id/route"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:layout_below="@+id/endingLocation"
+        android:onClick="onMapSearch"
+        android:text="Search" />
+
 </RelativeLayout>
