--- a/app/src/main/res/layout/activity_rides.xml
+++ b/app/src/main/res/layout/activity_rides.xml
@@ -23,4 +23,13 @@
 
     <include layout="@layout/content_rides" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="10dp"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:tint="@android:color/white"/>
+
 </android.support.design.widget.CoordinatorLayout>
