--- a/app/src/main/res/layout/adapter_rides_listitem.xml
+++ b/app/src/main/res/layout/adapter_rides_listitem.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="10dp"
@@ -22,16 +21,15 @@
         android:orientation="vertical">
         <TableRow>
             <TextView
-                android:id="@+id/ridelistemail"
+                android:id="@+id/ride_driver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="id"
                 android:gravity="left"
                 android:textSize="18sp" />
         </TableRow>
         <TableRow>
             <TextView
-                android:id="@+id/ridelistfullname"
+                android:id="@+id/ride_departure"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3dp" />
