--- a/app/src/main/res/layout/fragment_create_ride.xml
+++ b/app/src/main/res/layout/fragment_create_ride.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_rides"
     android:layout_width="match_parent"
@@ -8,100 +8,215 @@
     android:background="?android:attr/colorBackground"
     android:orientation="vertical">
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="0"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:background="?attr/colorControlHighlight">
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:background="@color/common_google_signin_btn_text_dark_disabled">
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/offer_a_ride"
+            android:id="@+id/createridetitle"
+            android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="24sp"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textStyle="normal|bold" />
 
-        <TableRow
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:inputType="textPostalAddress"
+            android:ems="10"
+            android:id="@+id/startText"
+            android:layout_marginTop="20dp"
+            android:hint="@string/start_location"
+            android:background="@color/common_google_signin_btn_text_dark_disabled"
+            android:padding="6dp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPostalAddress"
+            android:ems="10"
+            android:id="@+id/endText"
+            android:hint="@string/destination"
+            android:layout_marginTop="19dp"
+            android:background="@color/common_google_signin_btn_text_dark_disabled"
+            android:padding="6dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:lines="3"
+            android:maxLines="3"
+            android:scrollbars="vertical"
+            android:gravity="top|start"
+            android:scrollHorizontally="false"
+            android:id="@+id/ridedescription"
+            android:hint="@string/enter_a_ride_description" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:paddingBottom="8dp"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content">
 
             <TextView
-                android:text="@string/offer_a_ride"
-                android:id="@+id/createridetitle"
-                android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
-                android:textSize="24sp"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textStyle="normal|bold" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <EditText
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
-                android:ems="10"
-                android:id="@+id/startText"
-                android:layout_marginTop="20dp"
-                android:hint="@string/start_location"
-                android:background="@color/common_google_signin_btn_text_dark_disabled"
-                android:padding="6dp" />
+                android:text="Departure Date"/>
 
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
-                android:ems="10"
-                android:id="@+id/endText"
-                android:hint="@string/destination"
-                android:layout_marginTop="19dp"
-                android:background="@color/common_google_signin_btn_text_dark_disabled"
-                android:padding="6dp" />
-        </TableRow>
+                android:layout_width="wrap_content">
+                <Spinner
+                    android:id="@+id/months_drop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:dropDownWidth="100dp"
+                    android:entries="@array/months">
+                </Spinner>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/"
+                    android:textSize="24sp" />
+                <Spinner
+                    android:id="@+id/days_drop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:dropDownWidth="100dp"
+                    android:entries="@array/days">
+                </Spinner>
+            </LinearLayout>
+        </LinearLayout>
 
-    </TableLayout>
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Departure Time"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
+                <Spinner
+                    android:id="@+id/hours_drop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:dropDownWidth="100dp"
+                    android:entries="@array/hours">
+                </Spinner>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=":"
+                    android:textSize="24sp" />
+                <Spinner
+                    android:id="@+id/mins_drop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:dropDownWidth="100dp"
+                    android:entries="@array/mins">
+                </Spinner>
 
-    <TableLayout
+                <Spinner
+                    android:id="@+id/ampm_drop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:dropDownWidth="100dp"
+                    android:entries="@array/ampm">
+                </Spinner>
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Visible To:"
+            android:textSize="18sp" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:paddingRight="115dp">
+
+                <CheckBox
+                    android:text="Males"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/male_chk" />
+                <CheckBox
+                    android:text="Females"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/female_chk" />
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="People Within:"
+                    android:textSize="14sp" />
+                <Spinner
+                    android:id="@+id/radius_drop"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/distances" />
+
+
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <Button
+        android:text="Create Ride Offer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="0"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:id="@+id/create_ride_offer_btn"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"/>
+</GridLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:lines="4"
-                android:maxLines="6"
-                android:scrollbars="vertical"
-                android:gravity="top|start"
-                android:scrollHorizontally="false"
-                android:id="@+id/ridedescription"
-                android:hint="@string/enter_a_ride_description" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:hint="@string/departure_date_and_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/departtime" />
-        </TableRow>
-    </TableLayout>
-
-</LinearLayout>
