Rides can now be offered, and the ride list will display all rides.

--- a/app/src/main/res/layout/activity_rides.xml
+++ b/app/src/main/res/layout/activity_rides.xml
@@ -15,13 +15,10 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:layout_height="?android:attr/actionBarSize"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_rides" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -31,5 +28,7 @@
         android:layout_margin="10dp"
         app:srcCompat="@android:drawable/ic_input_add"
         android:tint="@android:color/white"/>
+
+    <include layout="@layout/content_rides" />
 
 </android.support.design.widget.CoordinatorLayout>
