Added view previous, added more filters

--- a/app/src/main/res/layout/fragment_rides.xml
+++ b/app/src/main/res/layout/fragment_rides.xml
@@ -7,9 +7,30 @@
     tools:context="com.it326.isucarpool.RidesFragment"
     tools:showIn="@layout/activity_rides">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+        <EditText
+            android:hint="Search Destinations"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_destinations" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:id="@+id/search_btn"/>
+    </LinearLayout>
+
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_centerHorizontal="true"
