--- a/app/src/main/res/layout/fragment_view_previous_rides_offers.xml
+++ b/app/src/main/res/layout/fragment_view_previous_rides_offers.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_view_previous_rides_offers"
     android:layout_width="match_parent"
@@ -11,10 +11,16 @@
     tools:context="com.it326.isucarpool.ViewPreviousRidesOffersActivityFragment"
     tools:showIn="@layout/activity_view_previous_rides_offers">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="View Previous Rides"
+        android:id="@+id/toggle_btn"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/prevrideslistview" />
 
-</LinearLayout>
+</RelativeLayout>
