--- a/app/src/main/res/layout/fragment_view_previous_rides_offers.xml
+++ b/app/src/main/res/layout/fragment_view_previous_rides_offers.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_view_previous_rides_offers"
     android:layout_width="match_parent"
@@ -9,18 +9,31 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.it326.isucarpool.ViewPreviousRidesOffersActivityFragment"
-    tools:showIn="@layout/activity_view_previous_rides_offers">
+    tools:showIn="@layout/activity_view_previous_rides_offers"
+    android:orientation="vertical"
+    android:weightSum="1">
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Previous Riders:"
+        android:id="@+id/prev_rd"
+        android:textSize="25sp"
+        android:gravity="center">
+
+    </TextView>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="214dp"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/prevrideslistview"
+        android:layout_weight="0.83" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View Previous Rides"
+        android:text="View Previous Drivers"
         android:id="@+id/toggle_btn"/>
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/prevrideslistview" />
 
-</RelativeLayout>
+</LinearLayout>
