--- a/app/src/main/res/layout/adapter_rides_listitem.xml
+++ b/app/src/main/res/layout/adapter_rides_listitem.xml
@@ -26,7 +26,7 @@
         android:src="@mipmap/ic_launcher" />
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <TableRow>
@@ -52,4 +52,14 @@
                     android:layout_marginRight="3dp" />
         </TableRow>
     </TableLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:padding="-10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:text="Edit"
+        android:id="@+id/edit_btn"/>
 </LinearLayout>
