--- a/app/src/main/res/layout/fragment_rides.xml
+++ b/app/src/main/res/layout/fragment_rides.xml
@@ -30,11 +30,10 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="55dp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_centerHorizontal="true"
         android:id="@+id/rideslistview" />
 
 </RelativeLayout>
