Added the AdminDashboard work done by Ross to code.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,6 +22,9 @@
                 android:id="@+id/nav_settings"
                 android:title="@string/settings" />
             <item
+                android:id="@+id/nav_admin_dashboard"
+                android:title="Admin Dashboard" />
+            <item
                 android:id="@+id/nav_logout"
                 android:title="@string/sign_out" />
         </menu>
