Accept ride request working.

--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -5,19 +5,15 @@
     android:id="@+id/fragment_message"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.it326.isucarpool.MessageFragment">
 
     <Button android:id="@+id/send_button"
         android:text="Send"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content" />
 
     <EditText android:id="@+id/input"
         android:layout_width="wrap_content"
@@ -33,7 +29,7 @@
 
     <ListView
         android:id="@+id/list_of_messages"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:stackFromBottom="true"
@@ -41,6 +37,13 @@
         android:layout_alignParentTop="true"
         android:layout_above="@+id/send_button"
         android:dividerHeight="0dp"
+        android:layout_marginTop="50dp"
         android:divider="@null"></ListView>
 
+    <Button android:id="@+id/acc_ride"
+        android:text="Accept Request"
+        android:layout_marginBottom="-50dp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_above="@+id/list_of_messages" />
 </RelativeLayout>
