--- a/app/src/main/res/menu/menu_message.xml
+++ b/app/src/main/res/menu/menu_message.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.it326.isucarpool.RidesActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/report_user"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Report User"
         app:showAsAction="never" />
 </menu>
